<resources>
    <string name="app_name">Family Photo Share</string>
    <string name="take_photo">Take Photo</string>
    <string name="view_photos">View Photos</string>
    <string name="group_page">Group Page</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_group">Create Group</string>
    <string name="join_group">Join Group</string>
    <string name="upload_pictures">Upload Pictures</string>
    <string name="image_view">image</string>
</resources>
